--- a/supercss.css
+++ b/supercss.css
@@ -108,7 +108,7 @@ background-color: rgba(63,81,181,0.7);
 	border:2px solid grey;
 	border-collapse:collapse;
 	background-color:rgba(191,191,191,0.8);
-	font:90% maquina;
+	
 
 }
 
@@ -119,12 +119,20 @@ background-color: rgba(63,81,181,0.7);
 	-webkit-border-radius: 6px;
 	-moz-border-radius: 6px;
 	border-radius: 6px;
+	
+	background-color:rgba(220,231,117,0.7);
+	/*background-color:rgba(255,235,59,0.4);*/
+	
+	font:90% maquina;
 
 	margin:4px;
-	padding-top:4px;
-	padding-bottom:4px;
-	padding-left:8px;
-	padding-right:8px;
+	padding-top:2px;
+	padding-bottom:2px;
+	padding-left:4px;
+	padding-right:4px;
+}
+.fechitaflyer text{
+	font-size:x-small;
 }
 
 /*Los cuadros*/
