--- a/supercss.css
+++ b/supercss.css
@@ -104,7 +104,7 @@ background-color: rgba(63,81,181,0.7);
 
 
 .cajitaflyer{
-	width:280px;
+	width:336px;
 	float:right;
 	
 	border:2px solid grey;
@@ -139,7 +139,7 @@ background-color: rgba(63,81,181,0.7);
 
 .cajadinamica{
 	
-	background-color:rgba(38,50,56,0.8);
+	background-color:rgba(38,50,56,0.4);
 	
 	max-width:100%;
 	margin-left:auto;
@@ -418,6 +418,7 @@ background-color: rgba(63,81,181,0.7);
 			
 
 			position: fixed;
+			max-height:700px;
 			
 			/* give dimensions */
 			
@@ -432,13 +433,24 @@ background-color: rgba(63,81,181,0.7);
 			
 			
 			overflow: auto;
-			z-index:4;
+			z-index:1002;
 			/*para que palabras largas no jodan la marraning:*/
-			overflow-wrap: break-word;
-			
-			
-			
-			
+			overflow-wrap: break-word;			
+		}
+		
+		#fade {
+			display: none;
+			position: fixed;
+			top: 0%;
+			left: 0%;
+			width: 100%;
+			height: 100%;
+			min-height:100%;
+			background-color:rgb(11,11,11);
+			z-index:1001;
+			-moz-opacity: 0.8;
+			opacity:.80;
+			filter: alpha(opacity=80);
 		}
 		
 		.cuadritos{
