--- a/supercss.css
+++ b/supercss.css
@@ -9,10 +9,10 @@ body {
 
 }
 
-A:link {text-decoration:none;color:black;} 
-A:visited {text-decoration:none;color:black;} 
-A:active {text-decoration:none;color:black;} 
-A:hover {text-decoration:none;color:purple;} 
+A:link {text-decoration:none;color:#fffde7;} 
+A:visited {text-decoration:none;color:#fffde7;} 
+A:active {text-decoration:none;color:darkgreen;} 
+A:hover {text-decoration:none;color:yellow;} 
 
 @font-face {
  font-family: maquina;
@@ -167,7 +167,7 @@ background-color: rgba(63,81,181,0.7);
 	}
 	
 	.color1{
-		background-color:rgba(220,231,117,0.6);
+		background-color:rgba(66,66,66,0.8);
 	}
 	
 	.color2{
@@ -195,8 +195,7 @@ background-color: rgba(63,81,181,0.7);
 	margin-top:2px;
 	border-collapse:collapse;	
 	}
-	
-	
+
 
 	/*BOTONES*/
 
@@ -418,7 +417,7 @@ background-color: rgba(63,81,181,0.7);
 			
 
 			position: fixed;
-			max-height:700px;
+			max-height:80%;
 			
 			/* give dimensions */
 			
@@ -446,7 +445,7 @@ background-color: rgba(63,81,181,0.7);
 			width: 100%;
 			height: 100%;
 			min-height:100%;
-			background-color:rgb(11,11,11);
+			background-color:rgb(38,50,56);
 			z-index:1001;
 			-moz-opacity: 0.8;
 			opacity:.80;
@@ -490,7 +489,7 @@ background-color: rgba(63,81,181,0.7);
 	/*Color de fondo de los input de los formularios*/
 	.inputtransparente{
 		width:100%;
-		background-color:rgba(77,182,172,0.6);
+		opacity:0.6;
 		border:none;
 		font:100% Arial, Helvetica, sans-serif;
 	}
